appId: ${MAESTRO_APP_ID}
---
- launchApp
- tapOn:
    id: goals-add-button
- tapOn:
    id: goals-save-button
- assertVisible:
    id: mutation-form-banner
- tapOn:
    id: mutation-form-banner-action
- assertVisible:
    id: goals-edit-sheet
