appId: ${MAESTRO_APP_ID}
---
- launchApp:
    clearState: true
    clearKeychain: true
- extendedWaitUntil:
    visible:
      id: onboarding-screen
    timeout: 60000
- tapOn:
    id: onboarding-demo-button
- assertVisible:
    id: home-screen
- openLink:
    link: darkfinances:///merchant/Amazon
- runFlow:
    when:
      visible: 'Open in ["“]Finances["”].*'
    commands:
      - tapOn:
          text: Open
- assertVisible:
    id: merchant-detail-screen
- assertVisible:
    id: merchant-range-1y-selected
- tapOn:
    id: merchant-range-6m
- assertVisible:
    id: merchant-range-6m-selected
- assertVisible: Amazon
- openLink:
    link: darkfinances:///tag/alex
- runFlow:
    when:
      visible: 'Open in ["“]Finances["”].*'
    commands:
      - tapOn:
          text: Open
- assertVisible:
    id: tag-detail-screen
- assertVisible:
    id: tag-detail-screen
